# qt-qml-stm32

./: .geminiignore  .geminirules  .gitignore  AGENTS.md  BUG_REPORT.md  CMakeLists.txt  README.md  download_more.sh  download_songs.sh  minify_md.py  patch_qml.py
.agents/skills/deep-research/: SKILL.md
.agents/skills/qt-cpp-review/: SKILL.md
.agents/skills/qt-qml-review/: SKILL.md
.agents/workflows/: brainstorming.md  cmake_standards.md  cpp_coding_standards.md  qml_coding_standards.md  qml_docs_standards.md
.cache/clangd/index/: MockScenarioEngine.cpp.C934B4DBBA4BBD81.idx  MockScenarioEngine.h.FAE2767F12BE4DA9.idx  MusicPlayerViewModel.cpp.6B2C1A7B1D3AC00B.idx  MusicPlayerViewModel.h.3ECDCAE435360C99.idx  MusicScanner.cpp.63530B12B98B1F0D.idx  MusicScanner.h.E2AE8BADDA971642.idx  SerialService.cpp.07F9835ABAC472C0.idx  SerialService.h.4B752D99E0630861.idx  SimulatorService.cpp.F3D2C7E82FFAA3AC.idx  SimulatorService.h.78F37E58FD30152A.idx  VehicleStatusViewModel.cpp.984736D22DA1565C.idx  VehicleStatusViewModel.h.94F4AC86C37FD004.idx  main.cpp.38695B9DD87AE07D.idx  main.cpp.968A505679D41719.idx  main.cpp.BE9EFF95CA7FAEED.idx
docs/: DOCUMENTATION_STANDARDS.md  architecture.md  hardware_integration.md  journal.md  music_player_design.md  research_codebase_audit.md  tasks_board.md  testing_strategy.md  ui_ux_guidelines.md
qml/: Main.qml  Theme.qml
qml/components/: CircularGauge.qml  EnergyBlocks.qml  GlassPanel.qml  GlowingText.qml  MusicPlayer.qml  NeonIcon.qml  NeonIconButton.qml  NeonTickGauge.qml
qml/screens/: DashboardScreen.qml
src/: main.cpp
src/services/: MockScenarioEngine.cpp  MockScenarioEngine.h  MusicScanner.cpp  MusicScanner.h  SerialService.cpp  SerialService.h  SimulatorService.cpp  SimulatorService.h
src/viewmodels/: MusicPlayerViewModel.cpp  MusicPlayerViewModel.h  VehicleStatusViewModel.cpp  VehicleStatusViewModel.h
tests/: CMakeLists.txt  main.cpp  tst_music_playback.cpp
